preventing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 body {
   margin: 0;
+  /* max-width: 100%; */
   background-color: #222222;
   font-family: "Lucida Sans Typewriter","Lucida Console",Monaco,"Bitstream Vera Sans Mono",monospace;
+}
+
+#root {
+  overflow-x: hidden;
 }
 
 html::-webkit-scrollbar {
